--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>DomoHub</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-  </welcome-file-list>
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Memory Realm Sample</web-resource-name>
+      <url-pattern>/*</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>tomcat</role-name>
+    </auth-constraint>
+  </security-constraint>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+            <form-login-page>/jsp/login.jsp</form-login-page>
+            <form-error-page>/jsp/error.jsp</form-error-page>
+        </form-login-config>
+    </login-config>
   <servlet>
     <description></description>
     <display-name>Home</display-name>
@@ -18,6 +26,25 @@
   <servlet-mapping>
     <servlet-name>Home</servlet-name>
     <url-pattern>/Home</url-pattern>
+  </servlet-mapping>
+  <display-name>DomoHub</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>Items</display-name>
+    <servlet-name>Items</servlet-name>
+    <servlet-class>Items</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Items</servlet-name>
+    <url-pattern>/Items</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
@@ -29,34 +56,13 @@
     <servlet-name>Logout</servlet-name>
     <url-pattern>/Logout</url-pattern>
   </servlet-mapping>
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>Authentification</web-resource-name>
-      <url-pattern>/*</url-pattern>
-      <http-method>GET</http-method>
-      <http-method>POST</http-method>
-    </web-resource-collection>
-    <auth-constraint>
-      <role-name>tomcat</role-name>
-    </auth-constraint>
-    <user-data-constraint>
-      <transport-guarantee>NONE</transport-guarantee>
-    </user-data-constraint>
-  </security-constraint>
-  <security-role>
-    <role-name>tomcat</role-name>
-  </security-role>
-  <login-config>
-    <auth-method>BASIC</auth-method>
-  </login-config>
   <servlet>
     <description></description>
-    <display-name>Items</display-name>
-    <servlet-name>Items</servlet-name>
-    <servlet-class>Items</servlet-class>
+    <display-name>Control</display-name>
+    <servlet-name>Control</servlet-name>
+    <servlet-class>Control</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>Items</servlet-name>
-    <url-pattern>/Items</url-pattern>
-  </servlet-mapping>
-</web-app>
+    <servlet-name>Control</servlet-name>
+    <url-pattern>/Control</url-pattern>
+  </servlet-mapping></web-app>
